...
                child: TransactionList(_transaction, _removeTransaciton),
              ),
          ],
        ),
      ),
      floatingActionButton: FloatingActionButton(
        key: Key('add_btn'),
        child: Icon(Icons.add),
        onPressed: () => _openTransactionFormModa(context),
      ),
      floatingActionButtonLocation: FloatingActionButtonLocation.centerFloat,
    );
  }
...
